# ZK-AntiCheat

./: README.md
circuits/: README.md
circuits/commitReveal/: Nargo.toml
circuits/commitReveal/src/: main.nr
circuits/gamePlayProver/: Nargo.toml  Prover.toml
circuits/gamePlayProver/src/: main.nr
circuits/merkleProof/: Nargo.toml  Prover.toml
circuits/merkleProof/src/: main.nr
circuits/recursiveWhitelist/: Nargo.toml  Prover.toml
circuits/recursiveWhitelist/src/: main.nr
circuits/stateTransition/: Nargo.toml
circuits/stateTransition/src/: main.nr
circuits/whitelist/: Nargo.toml  Prover.toml
circuits/whitelist/src/: main.nr
client/: Cargo.toml  test.toml
client/src/: main.rs  merklizer.rs
client/src/memory/: dumper.rs  mod.rs  region.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
serverProver/: README.md  input.toml  mock.ts  package-lock.json  package.json  server.ts  utils.ts
