[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
rs_merkle = "1.5.0"
hex = "0.4"
reqwest = {version = "0.12.22", features = ["json"]}
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
light-poseidon = "0.3.0"
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
toml = "0.8"
flate2 = "1.0"
